src/main/k8s/knative-eventing/eventing-webhook-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eventing-webhook
spec:
  hosts:
  - "*"
  gateways: 
  - knative-eventing-gateway
  http:
  - timeout: 5s
    route:
    - destination:
        host: eventing-webhook
