src/main/k8s/knative-eventing/networkpolicy-eventing-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: eventing-webhook
    networking.knative.dev/ingress-provider: istio
    serving.knative.dev/release: devel
  name: eventing-webhook
  namespace: knative-eventing
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: eventing-webhook
  policyTypes:
  - Ingress
